tests/errors/preprocessor/after_include_must_be_quote.c
#include needless_elif.c"

int main ()
{
	return 0;
}
